--- a/Frugl/Frugl/Views/Itemization/Itemization.storyboard
+++ b/Frugl/Frugl/Views/Itemization/Itemization.storyboard
@@ -38,45 +38,22 @@
                                 <rect key="frame" x="8" y="160.33333333333331" width="377" height="587.33333333333348"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="expenseCell" rowHeight="100" id="inY-Lg-dx9" customClass="ItemizationTableViewCell" customModule="Frugl" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="expenseCell" textLabel="7y7-KO-d4m" rowHeight="100" style="IBUITableViewCellStyleDefault" id="inY-Lg-dx9">
                                         <rect key="frame" x="0.0" y="50" width="377" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="inY-Lg-dx9" id="jXi-a6-Sf6">
                                             <rect key="frame" x="0.0" y="0.0" width="377" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="90" translatesAutoresizingMaskIntoConstraints="NO" id="OqF-e4-D4N">
-                                                    <rect key="frame" x="8" y="8" width="361" height="84"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Expense Name)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aza-7k-aV3">
-                                                            <rect key="frame" x="0.0" y="0.0" width="130" height="84"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="130" id="9Ka-v4-8sc"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Expense Amount)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lcn-PY-ejs">
-                                                            <rect key="frame" x="220" y="0.0" width="141" height="84"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                    </subviews>
-                                                </stackView>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7y7-KO-d4m">
+                                                    <rect key="frame" x="20" y="0.0" width="337" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="OqF-e4-D4N" firstAttribute="leading" secondItem="jXi-a6-Sf6" secondAttribute="leading" constant="8" id="07C-qG-hRl"/>
-                                                <constraint firstAttribute="bottom" secondItem="OqF-e4-D4N" secondAttribute="bottom" constant="8" id="5Va-8g-MRV"/>
-                                                <constraint firstItem="OqF-e4-D4N" firstAttribute="top" secondItem="jXi-a6-Sf6" secondAttribute="top" constant="8" id="ONs-2a-9Vf"/>
-                                                <constraint firstAttribute="trailing" secondItem="OqF-e4-D4N" secondAttribute="trailing" constant="8" id="ffh-1I-vet"/>
-                                            </constraints>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="expenseAmountLabel" destination="lcn-PY-ejs" id="G5X-NV-boz"/>
-                                            <outlet property="expenseNameLabel" destination="aza-7k-aV3" id="bU0-zw-EJ4"/>
-                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
